--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -58,7 +58,7 @@
                 Something really cool is coming, follow us for update now
             </p>
             <div class="flex-w flex-c-m cd100 p-b-33">
-                <a href="https://www.facebook.com/Elsayed7ssein/" target="_blank">
+                <a href="https://www.facebook.com/Elsayed7ssein" target="_blank">
                     <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15">
                         <span class="l2-txt1">
                             <i class="fab fa-facebook-f"></i>
@@ -72,7 +72,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/elsayed7ussein" target="_blank">
+                <a href="https://www.instagram.com/elsayed7ussein/" target="_blank">
                     <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15">
                         <span class="l2-txt1">
                             <i class="fab fa-instagram"></i>
@@ -86,21 +86,21 @@
                         </span>
                     </div>
                 </a>
-                <a href="https://www.Youtube.com/in/elsayedhussein" target="_blank">
+                <a href="https://youtube.com/channel/UCvGDUhJ2H5XPBhOhHVNjWEg?sub_confirmation=1" target="_blank">
                     <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15">
                         <span class="l2-txt1">
                             <i class="fab fa-youtube"></i>
                         </span>
                     </div>
                 </a>
-                <a href="https://web.telegram.org/k/" target="_blank">
+                <a href="https://t.me/Elsayed7ussein" target="_blank">
                     <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15">
                         <span class="l2-txt1">
                             <i class="fab fa-telegram-plane"></i>
                         </span>
                     </div>
                 </a>
-                <a href="https://www.tiktok.com/" target="_blank">
+                <a href="https://www.tiktok.com/@elsayed7ussein" target="_blank">
                     <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15">
                         <span class="l2-txt1">
                             <i class="fab fa-tiktok"></i>
